compiler/src/test/resources/amyc/nameAnalyzer/failing/ArgumentNumberFunction.amy
object Args
  fn foo(i: Int(32)): Int(32) = { foo(1, 2) }
end Args
